Refactor sleep endpoint to ping endpoint
